# AURAVIRTUAL

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake
src/core/: Application.cpp  Application.h  ApplicationPlatform.h  Singleton.h  main.cpp
src/debug/: Assertion.h
src/math/: Vector2D.cpp  Vector2D.h
src/renderer/: QueueFamily.cpp  QueueFamily.h  Renderer.cpp  Renderer.h  triangle-vulkan.c
src/scene/: Object.cpp  Object.h
